# vanguard2

./: .gitignore  Cargo.toml  Dockerfile  build.rs
auth/: Cargo.toml
auth/src/: auth_server.rs  dynamic_server.rs  lib.rs  main.rs  zones.rs
auth/src/proto/: dynamic_update_interface.proto  dynamic_update_interface.rs  dynamic_update_interface_grpc.rs  rrset.rs
cache/: Cargo.toml
cache/src/: cache.rs  cache_entry_key.rs  entry_key.rs  lib.rs  message_cache.rs  message_cache_entry.rs  message_util.rs  rrset_cache.rs  rrset_cache_entry.rs
datasrc/: Cargo.toml
datasrc/src/: error.rs  lib.rs  memory_zone.rs  memory_zone_test.rs  rdataset.rs  zone.rs  zone_loader.rs
datasrc/src/domaintree/: flag.rs  mod.rs  node.rs  node_chain.rs  tree.rs  tree_test.rs
doc/: recursive.md
etc/: vangard.conf
forwarder/: Cargo.toml
forwarder/src/: forwarder.rs  lib.rs
resolver/: Cargo.toml
resolver/src/: error.rs  forwarder.rs  lib.rs  message_classifier.rs  resolver.rs  roothint.rs  running_query.rs  sender.rs
resolver/src/cache/: cache.rs  message_cache.rs  message_cache_entry.rs  message_cache_entry_builder.rs  message_util.rs  mod.rs  rrset_cache.rs
resolver/src/forwarder/: forwarder.rs  mod.rs
resolver/src/nsas/: address_entry.rs  address_selector.rs  entry_key.rs  error.rs  message_util.rs  mod.rs  nameserver_cache.rs  nameserver_entry.rs  nameserver_fetcher.rs  ns_address_store.rs  test_helper.rs  zone_cache.rs  zone_entry.rs  zone_fetcher.rs
server/: Cargo.toml
server/src/: handler.rs  lib.rs  server.rs  tcp_server.rs  udp_server.rs  udp_stream.rs
src/: lib.rs  main.rs  resolver.rs
src/auth/: auth_server.rs  dynamic_server.rs  error.rs  mod.rs  zones.rs
src/auth/proto/: mod.rs
src/auth/proto/tmp/: dynamic_update_interface.rs
src/config/: config.rs  error.rs  mod.rs
src/error/: mod.rs
src/forwarder/: forwarder.rs  group.rs  manager.rs  mod.rs
src/network/: future_apdator.rs  mod.rs  nameserver_store.rs  sender.rs
src/recursor/: mod.rs  recursor.rs  recursor_future.rs  roothint.rs  running_query.rs  sender.rs
src/recursor/cache/: cache.rs  message_cache.rs  message_cache_entry.rs  mod.rs  rrset_cache.rs  rrset_cache_entry.rs
src/recursor/forwarder/: forwarder.rs  group.rs  manager.rs  mod.rs
src/recursor/nsas/: address_entry.rs  entry_key.rs  message_util.rs  mod.rs  nameserver_cache.rs  nameserver_fetcher.rs  nameserver_future.rs  nameserver_store.rs  ns_address_store.rs  test_helper.rs  zone_cache.rs  zone_fetcher.rs
src/recursor/util/: mod.rs  nameserver_store.rs  sender.rs
src/server/: handler.rs  mod.rs  server.rs  tcp_server.rs  udp_server.rs
storage/: Cargo.toml
storage/src/: lib.rs  rbnode.rs  rbtree.rs  zone.rs
storage/src/domaintree/: flag.rs  mod.rs  node.rs  node_chain.rs  rbnode.rs  rbtree.rs  test_helper.rs  tree.rs
storage/src/rbtree/: rbnode.rs  rbtree.rs
storage/src/unit_tests/: domaintree_test.rs  mod.rs  rbtree_test.rs
testdata/: example.org.zone
