[workspace]

[package]
name = "vanguard2"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
tokio = "0.1.8"
futures = "0.1.24"
clap = { version = "2.32", default-features = false}
r53 = { git = "https://github.com/zdnscloud/r53"}
failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
metrics = { git = "https://github.com/zdnscloud/cement-rs", package = "metrics"}
datasrc = { path = "datasrc" }
server = { path = "server" }
cache = { path = "cache" }
forwarder = { path = "forwarder" }
auth = { path = "auth" }
resolver = { path = "resolver" }
