[package]
name = "auth"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
tower-service = "0.2"
tokio = "0.1.8"
futures = "0.1.24"
protobuf = "2.7"
grpcio = "0.4.3"

#r53 = { git = "https://github.com/zdnscloud/r53"}
r53 = { path = "../../r53"}
failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
grpc_helpers = { git = "https://github.com/zdnscloud/cement-rs", package = "grpc_helpers"}
clap = { version = "2.32", default-features = false}

datasrc = { path = "../datasrc" }

[build-dependencies]
build_helpers = { git = "https://github.com/zdnscloud/cement-rs", package = "build_helpers"}

[dev-dependencies]
proptest = "0.9.4"
