[package]
name = "datasrc"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
#r53 = { git = "https://github.com/zdnscloud/r53"}
r53 = { path = "../../r53"}
failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
rbtree = { git = "https://github.com/zdnscloud/cement-rs", package = "rbtree"}

[dev-dependencies]
proptest = "0.9.4"
