[package]
name = "resolver"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
tokio = "0.1.8"
tokio-io = "0.1"
tokio-timer = "0.2.11"
futures = "0.1.28"
r53 = { git = "https://github.com/zdnscloud/r53"}
failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
lru = "0.1.15"
server = { path = "../server" }
