[package]
name = "server"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
tokio = "0.1.8"
tokio-timer = "0.2.11"
futures = "0.1.28"
hyper = "0.12.33"
lazy_static = "1.3.0"
prometheus = "0.4.2"
r53 = { git = "https://github.com/zdnscloud/r53"}
failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
